--- a/ping.yaml
+++ b/ping.yaml
@@ -1,4 +1,9 @@
 ---
 - hosts: all
+  ansible_connection: network_cli
+  ansible_network_os: ios
+  ansible_pass: 4rfv$RFV
+  ansible_user: admin
+  connection: local
   tasks:
    - ping:
