--- a/backup.yaml
+++ b/backup.yaml
@@ -2,12 +2,18 @@
 - hosts: all
   gather_facts: true
   connection: local
+
   tasks:
    - name: show run 
-     ios_command:
-     commands:
-      - show run 
-   - name: save output to /etc/ansible/backups 
-     copy: 
-      content: "{{ config.stdout[0] }}"
-     dest: "/etc/ansible/backup/show_run_{{ inventory_hostname }}.txt"
+   ios_command:
+   commands:
+     - show run 
+     host: "{{ ansible_host }}"
+     username: admin
+     password: 4rfv$RFV
+     register: config
+
+  - name: save output to /etc/ansible/backup 
+  copy: 
+  content: "{{ config.stdout[0] }}"
+  dest: "/etc/ansible/backup/show_run_{{ inventory_hostname }}.txt"
