--- a/backup.yaml
+++ b/backup.yaml
@@ -8,5 +8,6 @@
      ios_command:
       commands:
        - show run 
+       register: config
    - name: save output to /etc/ansible/backup 
      copy: content={{ config.stdout[0] }} dest=/etc/ansible/backup/show_run_{{ inventory_hostname }}.txt
