--- a/backup.yaml
+++ b/backup.yaml
@@ -2,12 +2,8 @@
 - hosts: all
   gather_facts: true
   connection: local
-
   tasks:
-   - name: show run 
-     ios_command:
-      commands:
-       - show run 
-       register: config
-   - name: save output to /etc/ansible/backup 
-     copy: content={{ config.stdout[0] }} dest=/etc/ansible/backup/show_run_{{ inventory_hostname }}.txt
+    - name: BACKUP THE CONFIG
+      ios_config:
+        backup: yes
+      register: config_output
