--- a/backup.yaml
+++ b/backup.yaml
@@ -7,3 +7,7 @@
       ios_config:
         backup: yes
       register: config_output
+    - name: RENAME BACKUP
+      copy:
+        src: "{{config_output.backup_path}}"
+        dest: "/etc/ansible/backup/{{inventory_hostname}}.config"
