--- a/ubuntuclone.yaml
+++ b/ubuntuclone.yaml
@@ -9,7 +9,7 @@
       username: administrator@vsphere.local
       password: 43erfdcv$#ERFDCV
       validate_certs: no
-      datacenter: enclave4
+      datacenter: Enclave-4
       state: present
       folder: Discovered virtual machine
       template: docker
